# webtointents

./: .gitignore  .replit  README.md  TODO.md  check_chromadb.py  chromadb_store.py  contact_center_intent_prompt.txt  crawler.py  dashboard.py  intent_generator.py  intents_chromadb_tab.py  llm_processor.py  main.py  pyproject.toml  requirements.txt  sitemap.xml  sitemap_handler.py  storage.py  test_chromadb.py  test_llm.py
attached_assets/: Pasted--AppSpec-AppName-Intent-Discovery-MVP-AppName-Description-A-web-application-for-scrapi-1747223370185.txt
chroma_db_store/: chroma.sqlite3
chromadb_cleaned_json/: cleaned_www.uhc.com_dental-vision-supplemental-plans_dental-insurance_20250519_151530.json
chromadb_data/: chroma.sqlite3
crawl_results/: crawl_20250514_194843_www.petpooja.com_.json  crawl_20250514_194956_www.petpooja.com_.json
crawled_data/: crawl_20250518_181148_www.uhc.com_dental-vision-supplemental-plans_dental-insurance.json  crawl_20250518_181609_www.uhc.com_dental-vision-supplemental-plans_dental-insurance.json  crawl_20250518_182111_www.uhc.com_dental-vision-supplemental-plans_dental-insurance.json  crawl_20250518_182353_www.uhc.com_dental-vision-supplemental-plans_dental-insurance.json  crawl_20250518_183747_www.petpooja.com_restaurant-sms-service.json  crawl_20250518_191203_www.uhc.com_dental-vision-supplemental-plans_dental-insurance.json  crawl_20250518_191341_www.uhc.com_dental-vision-supplemental-plans_dental-insurance.json  crawl_20250518_192109_www.uhc.com_dental-vision-supplemental-plans_dental-insurance.json  (+4 more)
src/processors/: __init__.py  (+7 more)
(+1 files in other folders)
