[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "bhavin", email = "inglebhavin98@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "replit-object-storage>=1.0.2",
    "requests>=2.32.3",
    "scrapy>=2.13.0",
    "selenium>=4.32.0",
    "streamlit>=1.45.1",
    "webdriver-manager>=4.0.2",
]

[tool.setuptools]
packages = ["sitemaps"]
